Correcting BS5 Packaging error

--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     ],
     "keywords": [
         "FixedHeader",
-        "Fixed Headers",
-        "Sticky",
+ "Fixed Headers",
+ "Sticky",
         "Bootstrap",
-        "Bootstrap5",
+ "Bootstrap5",
         "Datatables",
         "jQuery",
         "table",
@@ -22,8 +22,8 @@
         "sort"
     ],
     "dependencies": {
-        "datatables.net-fixedheader": ">=3.1.8",
-        "datatables.net-bs5": ">=1.10.24",
+        "datatables.net-fixedheader": ">=3.1.9",
+        "datatables.net-bs5": ">=1.10.26-dev",
         "jquery": ">=1.7"
     },
     "moduleType": [
