--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,6 @@
     ],
     "require": {
         "datatables.net/datatables.net-fixedheader": ">=3.1.9",
-        "datatables.net/datatables.net-bs5": ">=1.10.26-dev"
+        "datatables.net/datatables.net-bs5": ">=1.10.25"
     }
 }
