--- a/nuget.nuspec
+++ b/nuget.nuspec
@@ -11,7 +11,7 @@
         <tags>FixedHeader  Fixed Headers  Sticky  Bootstrap  Bootstrap5  Datatables jQuery table</tags>
         <dependencies>
             <dependency id="datatables.net-fixedheader" version=">=3.1.9"/>
-            <dependency id="datatables.net-bs5" version=">=1.10.26-dev"/>
+            <dependency id="datatables.net-bs5" version=">=1.10.25"/>
         </dependencies>
         <contentFiles>
             <files include="**/*" buildAction="Content"/>
