--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     ],
     "dependencies": {
         "datatables.net-fixedheader": ">=3.1.9",
-        "datatables.net-bs5": ">=1.10.26-dev",
+        "datatables.net-bs5": ">=1.10.25",
         "jquery": ">=1.7"
     },
     "moduleType": [
