--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "version": "3.2.0",
     "files": [
         "css/**/*.css",
-        "js/**/*.js"
+        "js/**/*.js",
+        "types/**/*.d.ts"
     ],
     "keywords": [
         "FixedHeader",
-        "Fixed Headers",
-        "Sticky",
+ "Fixed Headers",
+ "Sticky",
         "Bootstrap",
-        "Bootstrap5",
+ "Bootstrap5",
         "Datatables",
         "jQuery",
         "table",
@@ -22,8 +23,8 @@
         "sort"
     ],
     "dependencies": {
-        "datatables.net-fixedheader": ">=3.1.9",
-        "datatables.net-bs5": ">=1.10.25",
+        "datatables.net-fixedheader": ">=3.2.0",
+        "datatables.net-bs5": ">=1.11.3",
         "jquery": ">=1.7"
     },
     "moduleType": [
