--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "main": "js/fixedHeader.bootstrap5.js",
     "module": "js/fixedHeader.bootstrap5.mjs",
     "style": "css/fixedHeader.bootstrap5.css",
-    "types": "./types/fixedHeader.bootstrap5.d.ts",
+    "types": "./types/types.d.ts",
     "version": "3.2.4",
     "files": [
         "css/**/*.css",
