--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "module": "js/fixedHeader.bootstrap5.mjs",
     "style": "css/fixedHeader.bootstrap5.css",
     "types": "./types/fixedHeader.bootstrap5.d.ts",
-    "version": "3.4.0",
+    "version": "4.0.0",
     "files": [
         "css/**/*.css",
         "js/**/*.js",
@@ -25,8 +25,8 @@
         "sort"
     ],
     "dependencies": {
-        "datatables.net-fixedheader": ">=3.3.2",
-        "datatables.net-bs5": ">=1.13.4",
+        "datatables.net-fixedheader": "4.0.0",
+        "datatables.net-bs5": ">=2.0.0",
         "jquery": ">=1.7"
     },
     "moduleType": [
